kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: darts-league
  labels:
    name: darts-league
